# capc-host

./: README.md  pyproject.toml  requirements.txt
capc_host/: client.py  main.py  responder.py  server.py
tests/: test_main.py
