[tool.taskipy.tasks]
test = {cmd = "pytest -s", help = "Run unit test."}
server = {cmd = "python capc_host/server.py", help = "Run server."}
client = {cmd = "python capc_host/client.py", help = "Run client."}
export = {cmd = "poetry export -f requirements.txt -o requirements.txt --without-hashes", help = "Export requirements.txt"}

[tool.poetry]
name = "capc_host"
version = "0.1.2"
description = "CAPC Host server and message from client."
authors = ["HiraiKyo <kyo.mikhael@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
capc-host = "capc_host.server:main"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-env = "^1.1.3"
taskipy = "^1.13.0"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
